--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <main>
       <form id="userNumber">
         <label for="input">Enter Your Number:</label>
-        <input id="input" type="number" required="">
+        <input id="input" type="number" required>
         <input type="submit" name="" value="List Multiples">
       </form>
       <div id="output" class="col-md-12">
